<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.TodayFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/textView6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:scaleY="1.5"
            android:scaleX="1.5"
            android:src="@drawable/ic_water_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove_drink"
            android:textSize="11sp"
            android:layout_margin="4dp"
            app:layout_constraintBottom_toTopOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="@+id/cardView3" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="14dp"
            app:layout_constraintBottom_toTopOf="@+id/textToday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusableInTouchMode="true"
                android:background="?attr/colorPrimaryVariant"
                android:padding="8dp">

                <EditText
                    android:id="@+id/mlsToRemove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="100"
                    android:focusedByDefault="false"
                    android:inputType="number"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
                    app:layout_constraintEnd_toStartOf="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ml"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toTopOf="@+id/btnRemoveDrink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/btnRemoveDrink"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/label_remove_button"
                    android:textAllCaps="true"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4sp"
            android:text="@string/drink_title"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/cardView2" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="250dp"
            android:layout_height="370dp"
            android:layout_margin="16dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="14dp"
            app:layout_constraintBottom_toTopOf="@+id/textToday"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintMid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:background="?attr/colorPrimaryVariant"
                android:padding="12dp">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerDrinks"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/constraintMid" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="Hoje"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="32dp"
            app:cardCornerRadius="6dp"
            app:cardElevation="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintBottom2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="?attr/colorPrimaryVariant"
                android:padding="12dp">

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="20dp"
                    android:progressDrawable="@drawable/progress_bg"
                    android:secondaryProgress="@color/Accent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/remindersMarkedoftheDay"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/separator" />


                <TextView
                    android:id="@+id/waterOfDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1000"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@id/separator"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="@+id/progressBar"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" / "
                    android:textSize="24sp"
                    app:layout_constraintBaseline_toBaselineOf="@+id/goalOfDay"
                    app:layout_constraintEnd_toStartOf="@+id/goalOfDay"
                    app:layout_constraintStart_toEndOf="@+id/waterOfDay" />


                <TextView
                    android:id="@+id/goalOfDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2000"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toStartOf="@id/unit"
                    app:layout_constraintStart_toEndOf="@id/separator"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:text="ml"
                    android:textSize="12sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/goalOfDay"
                    app:layout_constraintEnd_toEndOf="@+id/progressBar"
                    app:layout_constraintStart_toEndOf="@id/goalOfDay" />

                <TextView
                    android:id="@+id/remindersMarkedoftheDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="8"
                    android:textSize="32sp"
                    app:layout_constraintEnd_toEndOf="@+id/reminderText"
                    app:layout_constraintStart_toStartOf="@+id/reminderText"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/reminderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/reminders_marked"
                    android:textSize="8sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/remindersMarkedoftheDay" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>